Estandarización de los JSON de resultado
